Ready to release.

--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
-Revision history for Devel-itto
+Revision history for Devel-Ditto
 
-0.01    Mon May 25 14:00:03 2009
+0.01    2009-05-29
         - Initial release.
 
