Fix stack depth snafu.

--- a/Changes
+++ b/Changes
@@ -3,3 +3,6 @@ Revision history for Devel-Ditto
 0.01    2009-05-29
         - Initial release.
 
+0.02    2009-05-29
+        - Fix stack depth snafu.
+
