--- a/Changes
+++ b/Changes
@@ -8,3 +8,6 @@ Revision history for Devel-Ditto
 
 0.03    2009-05-29
         - Add colour support
+
+0.04    2009-05-29
+        - Handle close on STDOUT, STDERR
