--- a/Changes
+++ b/Changes
@@ -1,16 +1,20 @@
-Revision history for Devel-Ditto
+Revision history for Perl module Devel::Ditto
 
-0.01    2009-05-29
-        - Initial release.
+0.06    2012-12-??
+        - Reversed order of entries in this file, to most recent first.
 
-0.02    2009-05-29
-        - Fix stack depth snafu.
-
-0.03    2009-05-29
-        - Add colour support
+0.05    2009-05-29
+        - Oops - remove spurious warning
 
 0.04    2009-05-29
         - Handle close on STDOUT, STDERR
 
-0.05    2009-05-29
-        - Oops - remove spurious warning
+0.03    2009-05-29
+        - Add colour support
+
+0.02    2009-05-29
+        - Fix stack depth snafu.
+
+0.01    2009-05-29
+        - Initial release.
+
