--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Perl module Devel::Ditto
 
 0.06    2012-12-??
+        - Added required perl version to Devel::Ditto::Colou?r
         - Reversed order of entries in this file, to most recent first.
 
 0.05    2009-05-29
