--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@ Revision history for Perl module Devel::Ditto
 0.06    2012-12-??
         - Added required perl version to Devel::Ditto::Colou?r
         - Reversed order of entries in this file, to most recent first.
+        - Added github repo to pod
 
 0.05    2009-05-29
         - Oops - remove spurious warning
